--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "main": "server.js",
   "dependencies": {
-    "ws": "~0.6.0"
+    "ws": "~0.6.0",
+    "otr": "~0.2.13"
   },
   "scripts": {
     "start": "node server.js"
