--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "backend",
-  "version": "0.0.0",
+  "version": "0.0.0-11",
   "main": "server.js",
   "dependencies": {
     "ws": "~0.6.0",
@@ -8,5 +8,9 @@
   },
   "scripts": {
     "start": "node server.js"
+  },
+  "subdomain": "suseprime-backend",
+  "engines": {
+    "node": "0.10.x"
   }
 }
